# Library-Management-Portal

./: .gitignore  README.md
Backend/: CMakeLists.txt  main.cpp
frontend/: index.html
frontend/src/: App.jsx
